--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,12 @@
 
   <name>vitupedia</name>
   <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <url>https://github.com/antl3r/vitupedia</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
+    <maven.compiler.source>21.0.6</maven.compiler.source>
+    <maven.compiler.target>21.0.6</maven.compiler.target>
   </properties>
 
   <dependencies>
